+ Update Timer configuration to retrive tasks

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -29,5 +29,8 @@
     "Password": "admin",
     "Queue": "NotificationsQueue",
     "Port": "5672"
+  },
+  "TimerConfiguration": {
+    "Time": "3600000" // Deve estar em milisegundos, serve como um timer para ir buscar tasks ao Camunda
   }
 }
