--- a/CMA.ISMAI.Trello.API/CMA.ISMAI.Trello.API.csproj
+++ b/CMA.ISMAI.Trello.API/CMA.ISMAI.Trello.API.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>3d087187-b6fa-4c53-a2ce-e37aa417c07d</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
