--- a/CMA.ISMAI.Notifications/CMA.ISMAI.Notifications.csproj
+++ b/CMA.ISMAI.Notifications/CMA.ISMAI.Notifications.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
