+ Email update. + Now you can say the host and the port.

--- a/CMA.ISMAI.Notifications/appsettings.json
+++ b/CMA.ISMAI.Notifications/appsettings.json
@@ -11,6 +11,8 @@
   },
   "Notification": {
     "Email": "xxx",
-    "Password": "xx"
+    "Password": "xx",
+    "Host": "",
+    "Port": 587
   }
 }
