+ Website updated with portuguese translation

--- a/CMA.ISMAI.Notifications/appsettings.json
+++ b/CMA.ISMAI.Notifications/appsettings.json
@@ -3,16 +3,16 @@
     "Uri": "http://elasticsearch:9200/"
   },
   "RabbitMq": {
-    "Uri": "rabbitmq",
+    "Uri": "localhost",
     "Username": "admin",
     "Password": "admin",
-    "Queue": "NotificationsQueue",
-    "Port": "5672"
+    "Port": "5672",
+    "Queue": "NotificationsQueue"
   },
   "Notification": {
-    "Email": "xxx",
-    "Password": "xx",
-    "Host": "",
+    "Email": "trelloismai@gmail.com",
+    "Password": "trelloteste123",
+    "Host": "smtp.gmail.com",
     "Port": 587
   }
 }
