--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -1,15 +1,15 @@
 {
   "ElasticConfiguration": {
-    "Uri": "http://elasticsearch:9200/"
+    "Uri": "http://localhost:9200/"
   },
   "CamundaConfiguration": {
-    "Uri": "http://camunda:8080/engine-rest/engine/default/"
+    "Uri": "http://localhost:8080/engine-rest/engine/default/"
   },
   "TrelloApi": {
-    "AddCardUri": "http://cmaismaitrelloapi/Trello/AddCard",
-    "DeleteCardUri": "http://cmaismaitrelloapi/Trello/DeleteCard",
-    "GetCardStateUri": "http://cmaismaitrelloapi/Trello/GetCardStatus",
-    "GetCardAttachmentsUri": "http://cmaismaitrelloapi/Trello/GetCardAttachments"
+    "AddCardUri": "http://localhost:5000/Trello/AddCard",
+    "DeleteCardUri": "http://localhost:5000/Trello/DeleteCard",
+    "GetCardStateUri": "http://localhost:5000/Trello/GetCardStatus",
+    "GetCardAttachmentsUri": "http://localhost:5000/Trello/GetCardAttachments"
   },
   "TrelloCardsTime": {
     "coursecoordinator": 20,
@@ -21,16 +21,16 @@
     "Activatedelay": true
   },
   "EmailSecretaria": {
-    "Email": "xxx"
+    "Email": "a029216@ismai.pt"
   },
   "RabbitMq": {
-    "Uri": "rabbitmq",
+    "Uri": "localhost",
     "Username": "admin",
     "Password": "admin",
     "Queue": "NotificationsQueue",
     "Port": "5672"
   },
   "TimerConfiguration": {
-    "Time": "3600000" // Deve estar em milisegundos, serve como um timer para ir buscar tasks ao Camunda
+    "Time": "60000" // Deve estar em milisegundos, serve como um timer para ir buscar tasks ao Camunda
   }
 }
