--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -7,13 +7,13 @@
     }
   },
   "ElasticConfiguration": {
-    "Uri": "http://elasticsearch:9200/"
+    "Uri": "http://localhost:9200/"
   },
   "Trello": {
-    "Uri": "http://cmaismaitrelloapi/Trello/AddCardAndProcess"
+    "Uri": "http://localhost:5000/Trello/AddCardAndProcess"
   },
   "HealthCheck": {
-    "Uri": "http://localhost:5666/hc-ui"
+    "Uri": "http://localhost:5000/hc-ui"
   },
 
   "TrelloCardsTime": {
