--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -10,10 +10,10 @@
     "Uri": "http://elasticsearch:9200/"
   },
   "Camunda": {
-    "Uri": "http://camunda:8080/engine-rest/engine/default/"
+    "Uri": "http://localhost:8080/engine-rest/engine/default/"
   },
   "CamundaHealth": {
-    "Uri": "http://camunda:8080/"
+    "Uri": "http://localhost:8080/"
   },
   "FileReader": {
     "Path": "C:\\Users\\Carlos Campos\\Desktop\\ismai.xlsx"
@@ -35,7 +35,7 @@
     "Testing_board": "5e8a3bb351ea21188bc0a6b2"
   },
   "RabbitMqCore": {
-    "Uri": "rabbitmq",
+    "Uri": "localhost",
     "Username": "admin",
     "Password": "admin",
     "Port": "5672"
@@ -48,7 +48,7 @@
     "HealthChecks": [
       {
         "Name": "Health Check",
-        "Uri": "http://cmaismaitrelloapi/hc"
+        "Uri": "http://localhost:5000/hc"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
