--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ElasticConfiguration": {
-    "Uri": "http://elasticsearch:9200/"
+    "Uri": "http://localhost:9200/"
   },
   "Camunda": {
     "Uri": "http://localhost:8080/engine-rest/engine/default/"
@@ -19,7 +19,7 @@
     "Path": "C:\\Users\\Carlos Campos\\Desktop\\ismai.xlsx"
   },
   "RabbitMq": {
-    "Uri": "amqp://admin:admin@rabbitmq:5672/"
+    "Uri": "amqp://admin:admin@localhost:5672/"
   },
   "Trello": {
     "Uri": "https://api.trello.com"
@@ -34,14 +34,8 @@
     "Scientificcouncil": "5e7a617c1c87ae276116c00f",
     "Testing_board": "5e8a3bb351ea21188bc0a6b2"
   },
-  "RabbitMqCore": {
-    "Uri": "localhost",
-    "Username": "admin",
-    "Password": "admin",
-    "Port": "5672"
-  },
   "EventStore": {
-    "IPAddress": "tcp://admin:changeit@eventstore:1113"
+    "IPAddress": "tcp://admin:changeit@localhost:1113"
   },
   "AllowedHosts": "*",
   "HealthChecksUI": {
