+ docker compose update

--- a/CMA.ISMAI.Notifications/Properties/launchSettings.json
+++ b/CMA.ISMAI.Notifications/Properties/launchSettings.json
@@ -2,6 +2,9 @@
   "profiles": {
     "CMA.ISMAI.Notifications": {
       "commandName": "Project"
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
