+ Update appsettings json

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -12,13 +12,13 @@
     "GetCardAttachmentsUri": "http://localhost:5000/Trello/GetCardAttachments"
   },
   "TrelloCardsTime": {
-    "coursecoordinator": 20,
-    "departmentdirector": 5,
-    "coordenatorjury": 2,
-    "jurydelibers": 2
+    "coursecoordinator": 20, // # Tempo para a tramitação coursecoordinator - Verificar diagrama BPMN
+    "departmentdirector": 5, //# Tempo para a tramitação departmentdirector - Verificar diagrama BPMN
+    "coordenatorjury": 2, //# Tempo para a tramitação coordenatorjury - Verificar diagrama BPMN
+    "jurydelibers": 2 //# Tempo para a tramitação jurydelibers - Verificar diagrama BPMN
   },
   "SummerDelay": {
-    "Activatedelay": true
+    "Activatedelay": true //  # Se desejamos que as tramitações sejam interrompidas em Agosto
   },
   "EmailSecretaria": {
     "Email": "a029216@ismai.pt"
