--- a/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.0.1" />
   </ItemGroup>
 
