--- a/CMA.ISMAI.Notifications/appsettings.json
+++ b/CMA.ISMAI.Notifications/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ElasticConfiguration": {
-    "Uri": "http://elasticsearch:9200/"
+    "Uri": "http://localhost:9200/"
   },
   "RabbitMq": {
     "Uri": "localhost",
