--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -22,7 +22,7 @@
     "Uri": "amqp://admin:admin@localhost:5672/"
   },
   "Trello": { // URL da API do Trello
-    "Uri": "https://api.trello.com"  
+    "Uri": "https://api.trello.com"
   },
   "TrelloKey": {
     "AppKey": "b9ef9c087e54b015072af32ee9678bbe", // # APPKey para a API do Trello -  Descrito nos passos em comum
@@ -37,15 +37,5 @@
   "EventStore": {
     "IPAddress": "tcp://admin:changeit@localhost:1113"
   },
-  "AllowedHosts": "*",
-  "HealthChecksUI": {
-    "HealthChecks": [
-      {
-        "Name": "Health Check",
-        "Uri": "http://localhost:5000/hc"
-      }
-    ],
-    "EvaluationTimeOnSeconds": 10,
-    "MinimumSecondsBetweenFailureNotifications": 60
-  }
+  "AllowedHosts": "*"
 }
