--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -31,6 +31,7 @@
     "Port": "5672"
   },
   "TimerConfiguration": {
-    "Time": "60000" // Deve estar em milisegundos, serve como um timer para ir buscar tasks ao Camunda
+    "Time": "30000", // Deve estar em milisegundos, serve como um timer para ir buscar tasks ao Camunda
+    "Tasks": "30"
   }
 }
