--- a/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.UI.csproj
+++ b/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.UI.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
