--- a/CMA.ISMAI.Sagas/Dockerfile
+++ b/CMA.ISMAI.Sagas/Dockerfile
@@ -1,12 +1,9 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-nanoserver-1809 AS base
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1-buster-slim AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1809 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.UI.csproj", "CMA.ISMAI.Sagas/"]
 COPY ["CMA.ISMAI.Core/CMA.ISMAI.Core.csproj", "CMA.ISMAI.Core/"]
