+ Docker compose update

--- a/TrelloProject_linnux/compose/docker-compose.yml
+++ b/TrelloProject_linnux/compose/docker-compose.yml
@@ -1,3 +1,9 @@
+# Neste ficheiro, devemos modificar o caminho dos volumes para o caminho onde se encontra a informação pretendida.
+# Nas variaveis de ambiente, estas são simples de ser compreendidas, logo, devemos preenche-lás com a informação pedida.
+# Nas imagens, elasticsearch até portainer, não necessitamos de fazer modificações.
+# !! Variaveis importantes
+#  TimerConfiguration__Time=30000 e TimerConfiguration__Tasks=30 são varáveis importantes, pois representam o tempo de obtenção de dados do camunda e o número de tasks que iremos requistiar ao Camunda BPM
+
 version: '3.4'
 
 services:
