--- a/TrelloProject_windows/compose/docker-compose.yml
+++ b/TrelloProject_windows/compose/docker-compose.yml
@@ -1,3 +1,6 @@
+# Neste ficheiro, devemos modificar o caminho dos volumes para o caminho onde se encontra a informação pretendida.
+# Nas variaveis de ambiente, estas são simples de ser compreendidas, logo, devemos preenche-lás com a informação pedida. - Não necessitamos obrigatóriamente de modificar o que se encontra para a frente deste valor ":". 
+# Nas imagens, elasticsearch até portainer, não necessitamos de fazer modificações.
 version: '3.4'
 
 services:
