--- a/TrelloProject_linnux/compose/docker-compose.yml
+++ b/TrelloProject_linnux/compose/docker-compose.yml
@@ -2,7 +2,10 @@
 # Nas variaveis de ambiente, estas são simples de ser compreendidas, logo, devemos preenche-lás com a informação pedida.
 # Nas imagens, elasticsearch até portainer, não necessitamos de fazer modificações.
 # !! Variaveis importantes
-#  TimerConfiguration__Time=30000 e TimerConfiguration__Tasks=30 são varáveis importantes, pois representam o tempo de obtenção de dados do camunda e o número de tasks que iremos requistiar ao Camunda BPM
+#  TimeToFetch__Time=30000 e TaskPerFetch__Time=30 são varáveis importantes, pois representam o tempo de obtenção de dados do camunda e o número de tasks que iremos requistiar ao Camunda BPM
+# Nos volumes, apenas necessitamos de editar a parte esquerda ao ":", pois é onde devemos indicar onde, no nosso computar, a pasta do container se vai localizar.
+# Uma variavel de volume que tenha este aspeto :/Users/carloscampos/Desktop/TrelloProject_linnux/excel - Representa uma pasta que se encontra no nosso computador. O ficheiro que nela se encontrar, o ficheiro com o nome de utilizadores do Trello, deve ter o seguinte nome : ismai.xlsx
+# Ou, caso tenha um nome diferente, este deverá ser atualizado na seguinte váriavel       - FileReader__Path=//shared//ismai.xlsx
 
 version: '3.4'
 
